Cloth disappears on frame 2+. #78113

Closed
opened 2020-06-21 22:32:49 +02:00 by KingKilo · 10 comments

System Information
Operating system: Windows 10 Home - 10.0.18362

NVIDIA GeForce GTX 1080 Ti
Intel(R) Core(TM) i7-7800X CPU @ 3.50GHz
32GB RAM

Blender Version
Broken: 2.83
Worked: newest version of Blender that worked as expected

Short description of error
I've made a few flags, to be fluttering in the wind.
However, when I play my animation (before or after baking all dynamics) most of them just disappear. (often all of them)
Others just absolutely spazz out'. As if some unknown force is scrambling them.

How to replicate.
Make a 2m x 1m plane.
Subdivide up to 60x cuts
Add cloth modifier.
Object collisions
Self Collisions

Add solidify modifier.
Add Subdivision modifier.

Top left 3 and bottom left 3 vertexes are added to vertex group. (add to shape)

Add wind > 1500 strength.

Press play

Flags.blend

**System Information** Operating system: Windows 10 Home - 10.0.18362 NVIDIA GeForce GTX 1080 Ti Intel(R) Core(TM) i7-7800X CPU @ 3.50GHz 32GB RAM **Blender Version** Broken: 2.83 Worked: newest version of Blender that worked as expected **Short description of error** I've made a few flags, to be fluttering in the wind. However, when I play my animation (before or after baking all dynamics) most of them just disappear. (often all of them) Others just absolutely spazz out'. As if some unknown force is scrambling them. **How to replicate.** Make a 2m x 1m plane. Subdivide up to 60x cuts Add cloth modifier. Object collisions Self Collisions Add solidify modifier. Add Subdivision modifier. Top left 3 and bottom left 3 vertexes are added to vertex group. (add to shape) Add wind > 1500 strength. *Press play* [Flags.blend](https://archive.blender.org/developer/F8635651/Flags.blend)
Author

Added subscriber: @KingKilo

Added subscriber: @KingKilo
Author

Little self-update.

When the flags are rotated 90 degrees on the X axis, they seem to always fail. But when I put it on 89 or 91, it works much better.
Still buggy from time to time, with flags going absolutely ham, or disappearing, but not nearly as much.

Little self-update. When the flags are rotated 90 degrees on the X axis, they seem to always fail. But when I put it on 89 or 91, it works much better. Still buggy from time to time, with flags going absolutely ham, or disappearing, but not nearly as much.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

It seems related to the Self Collision.
Maybe the distance for self collision is not well configured?

It is strange that in the file some simulations work and others do not, despite having the same settings.

This does indeed appear to be a bug.

I cannot reproduce this problem with previous versions of blender. However, the simulation takes much longer in 2.80 - 2.82.

It seems related to the `Self Collision`. Maybe the distance for self collision is not well configured? It is strange that in the file some simulations work and others do not, despite having the same settings. This does indeed appear to be a bug. I cannot reproduce this problem with previous versions of blender. However, the simulation takes much longer in 2.80 - 2.82.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Can we get a smaller/simpler example .blend file that simulates a bit faster. That would make fixing this issue easier.

Can we get a smaller/simpler example .blend file that simulates a bit faster. That would make fixing this issue easier.

I couldn't make a good simplified file since the mesh that presents the problem seems to be quite random.
But putting a breakpoint in the cloth_selfcollision function I realized that, in the first interaction, the distance calculated by compute_collision_point_tri_tri is 0.0f. Which should be impossible since none of the triangles are really intersecting.
So I believe that the first step in solving this problem is finding out what causes the wrong result in compute_collision_point_tri_tri.

I can investigate this better next week.

I couldn't make a good simplified file since the mesh that presents the problem seems to be quite random. But putting a breakpoint in the `cloth_selfcollision` function I realized that, in the first interaction, the distance calculated by `compute_collision_point_tri_tri` is `0.0f`. Which should be impossible since none of the triangles are really intersecting. So I believe that the first step in solving this problem is finding out what causes the wrong result in `compute_collision_point_tri_tri`. I can investigate this better next week.

This issue was referenced by c0340ec893

This issue was referenced by c0340ec89393055bbb0ba0432b9edb5d70b3711c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-08-10 17:06:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78113
No description provided.